@@ -19,6 +19,7 @@ package org.springframework.boot.devtools.tests;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.util.FileSystemUtils;
@@ -44,7 +45,9 @@ abstract class AbstractApplicationLauncher implements ApplicationLauncher {
 	}
 
 	protected final List<String> getDependencyJarPaths() {
-		return Stream.of(this.directories.getDependenciesDirectory().listFiles()).map(File::getAbsolutePath).toList();
+		return Stream.of(this.directories.getDependenciesDirectory().listFiles())
+			.map(File::getAbsolutePath)
+			.collect(Collectors.toList());
 	}
 
 	protected final Directories getDirectories() {
